<resources>
    <string name="app_name">WTA Storyteller helper</string>
    <string name="newcharacter">New character</string>
    <string name="no_characters">You haven\'t added any characters yet.</string>
    <string name="title_activity_create__character">Create_Character</string>
    <string name="characterTribe">Tribe</string>
    <string name="characterAuspice">Auspice</string>
    <string name="characterBreed">Breed</string>
    <string name="characterName">Name</string>
    <string name="saveCharacter">Save character</string>
    <string name="Rage">Rage</string>
    <string name="Gnosis">Gnosis</string>
    <string name="Willpower">Willpower</string>
    <string name="Health">Health</string>
    <string name="characterSaved">Character saved sucessfully!</string>
    <string name="errorSaveCharacter">Error in saved character</string>
    <string name="title_activity_edit_character">EditCharacter</string>
    <string name="deleteCharacter">Delete character</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="editCharacter">Edit character</string>
    <string name="characterSucessfullyDeleted">Character sucessfuly deleted!</string>
    <string name="errorDeletCharacter">Error in delete character.</string>
    <string name="backToScreen">Back to main screen</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="aboutContent">This app was developed for Werewolf: The Apocalipse fãns, this content is fully free and just work to help game master.
    Werewolf The Apocalipse is a trademark of CCP hf. All rights reserved.
    This app is a free software, for more infos you can see  in the page project in github https://github.com/Ladeia/WTA-Storyteller-helper</string>
</resources>
